# xenese.transaction-based.machine-learning

./: .env.example  .gitignore  ADVANCED_AI_DASHBOARD.md  API_ROUTING_FIX_REPORT.md  C#_PROTO_ACTOR_UI_INTEGRATION_COMPLETE.md  COMMIT_MESSAGE.md  CONTROLLER_ENDPOINTS_IMPLEMENTATION_REPORT.md  CRITICAL_SECURITY_UPDATE.md  DEMO_UI_AND_API_TEST_GUIDE.md  DOCKER_BUILDX_FIX.md  DOCKER_PULL_TIMEOUT_FIX.md  Dockerfile  Dockerfile.flink  ENTERPRISE_READINESS_ASSESSMENT.md  ENUM_CONVERSION_FIX_COMPLETE.md  FINAL_SECURITY_ASSESSMENT.md  FIXES_APPLIED.md  FLINK_IMPLEMENTATION.md  FULL_STACK_DASHBOARD.md  GITHUB_KAFKA_FIX.md  GITHUB_KAFKA_ZOOKEEPER_FIX.md  GITHUB_UPDATE_INSTRUCTIONS.md  INTEGRATION_GUIDE.md  KAFKA_CONTAINER_FIX.md  KAFKA_FIX_README.md  LIBRARY_MIGRATION_GUIDE.md  LICENSE  MYPY_ERROR_ANALYSIS.md  MYPY_FINAL_STATUS.md  MYPY_FIXES_SUMMARY.md  MYPY_PRODUCTION_SOLUTION.md  Makefile  Makefile.prod  PRODUCTION_READY.md  PRODUCTION_READY_MYPY_FIXES.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_SUMMARY.md  PRODUCTION_UAT_REPORT.md  PROTO_ACTOR_IMPLEMENTATION_SUCCESS.md  PROTO_ACTOR_STATUS.md  (+95 more)
api/: production_server.py
config/: security.py  settings.py
demo/: README.md  ab_testing_dashboard.py  app.py  check_proto_actor.py  database_integration.py  demo_api_integration.py  drift_visualization.py  requirements.txt  run_demo.py  test_api_integration.py  test_db_integration.py  test_docker_api_from_demo.py  test_proto_actor_integration.py
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml  init-db.sql  mlflow-entrypoint.sh  nginx.conf  prometheus.yml
docs/: BUSINESS_CASES.md  DATA_SCIENTIST_GUIDE.md  MIGRATION_GUIDE_V2.md  TECHNICAL_INNOVATIONS.md  TML_Platform_Advanced_Guide.md  TML_Platform_Architecture.md  TML_Platform_Intermediate_Guide.md  TML_Platform_Technical_Guide_For_Students.docx  TML_Platform_Technical_Guide_For_Students.md  TML_Platform_Technical_Guide_For_Students.rtf  TML_Technical_Implementation_Guide.md  deployment.md  getting_started.md  scaling.md  security.md  ~$L_Platform_Technical_Guide_For_Students.docx
examples/: __init__.py  api_client_example.py  basic_usage.py  streaming_model_updater.py  (+1 more)
(+207 files in other folders)
