[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = false
ignore_missing_imports = true
implicit_reexport = true
allow_untyped_globals = true
allow_redefinition = true
local_partial_types = true
disable_error_code = ["method-assign", "attr-defined", "no-redef", "assignment"]
plugins = []

[[tool.mypy.overrides]]
module = "tml.physics.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tml.core.inheritance"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tml.core.config"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tml.orchestration.*"
strict_optional = false
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "tml.utils.*"
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "tml.learning.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tml.core.production_processor"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tml.core.enhanced_platform"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tml.__init__"
ignore_errors = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tml"
version = "0.1.0"
description = "Transaction-based Machine Learning Platform"
authors = [{name = "TML Team", email = "team@tml.ai"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "redis>=4.0.0",
    "kafka-python>=2.0.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "types-PyYAML>=6.0.0",
]
